fix spacing and fix add gym form

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,7 @@ body {
 .bg-darker {
   background-color: #304151 !important;
 }
+
+.orangeText {
+  color: #DD6727;
+}
